verification, bacgkround upload, color/theme change, image overlay

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 {% block content %}
 
             <div class="row">
-                <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
+                <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top"><div id="home-overlay"></div>
                     <div class="p-4 position-fixed text-uppercase banner-about">
                         About us
                         <hr class="banner_hr position-fixed border mt-2">
@@ -35,7 +35,7 @@
                         <div class="col section-board text-center">
                             <ul id="board" class="px-5 px-5">
                                 <li class="p-4">
-                                    <div id="1" class="board-member d-inline-block text-center p-5 mx-5">
+                                    <div id="1" class="board-member d-inline-block text-center p-5 mr-3">
                                         Jane Doe
                                         <br>
                                         <span class="board-member-roll">
@@ -52,7 +52,7 @@
                                     </div> 
                                 </li>
                                 <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
                                         Rebecca Good
                                         <br>
                                         <span class="board-member-roll">
@@ -69,7 +69,7 @@
                                     </div> 
                                 </li>
                                 <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
                                         John Michael
                                         <br>
                                         <span class="board-member-roll">
@@ -86,7 +86,7 @@
                                     </div> 
                                 </li>
                                 <li class="p-4">
-                                    <div id="2" class="board-member d-inline-block text-center p-5 mx-5">
+                                    <div id="2" class="board-member d-inline-block text-center p-5 mr-3">
                                         Shana Anthony
                                         <br>
                                         <span class="board-member-roll">
