--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,19 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 
-            <div id="error_flash" class="alert_flash alert pt-4 text-center text-light font-weight-bold position-fixed bg-info overflow-auto">
-                <p>
-                    Ooops! Well this is embarrasing... 
-                </p>
-                <p>
-                    Something went wrong. Please try again.
-                </p>
-            </div>
-            <div id="Sent_flash" class="alert_flash alert pt-4 text-center text-light font-weight-bold position-fixed bg-info overflow-auto">
-                <p>
-                    Youur message was sent to CUBPS!
-                </p>
-            </div>
             <div class="row">
                 <div id="img-about" class="col pl-0 position-relative text-white text-center align-text-top">
                     <div class="p-4 position-fixed text-uppercase banner-about">
@@ -29,7 +16,7 @@
                         <div class="col section-contact-bar bg-light p-4">
                         </div>
                     </div>
-                    <div class="row px-2 pt-4">
+                    <div class="row px-3 px-sm-4  pt-4">
                         <div class="col-1 col-sm-2 col-lg-3">
                         </div>
                         <div class="col-10 col-sm-8 col-lg-6 section-contact-header text-dark p-0 py-sm-3 py-lg-4">
@@ -48,11 +35,11 @@
                         <div class="col-10 col-sm-8 col-lg-6 section-contact-body px-2 py-2">
                             <form id="mail-form">
                                 <div class="form-row">
-                                    <label for="inputName" class="col p-2 text-dark">
+                                    <label for="name" class="col p-2 text-dark">
                                         Name: &#42;
                                     </label>
                                 </div>
-                                <div class="form-row" id="inputName">
+                                <div class="form-row" id="name">
                                     <div class="col p-2">
                                         <input id="fname" type="text" class="form-control" placeholder="First name" required>
                                     </div>
@@ -90,7 +77,7 @@
                                         <textarea class="form-control" id="message" rows="5" required></textarea>
                                     </div>
                                 </div>
-                                <button id="contact" type="button" class="btn btn-secondary float-right my-4 mx-2">
+                                <button id="contact" type="button" class="btn {{ 'btn-' + color_scheme }} float-right my-4 mx-2">
                                     Submit
                                 </button>
                             </form>    
