--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -129,13 +129,6 @@ table {
 }
 
 
-#upload {
-    
-    border-radius: 0px;
-    font-family: Galvji;
-    font-size: 10pt;
-    font-weight: 500;
-}
 
 #preview {
     
@@ -154,7 +147,6 @@ table {
 
 #img-home {
     margin-top: -4px;
-    opacity: 1;
     background-image: url("/static/images/home.jpeg");
     background-size: auto;
     background-attachment: fixed;
@@ -165,6 +157,21 @@ table {
     font-size: 42px;
     transform: scaleY(0.9) translateY(-5%);
 }
+
+#home-overlay {
+
+    opacity: 0.3;
+    height: 110vh;
+    width: 100vw;
+    background-color: #0f121a}
+}
+
+#home-overlay::after {
+
+    opacity: 1;
+}
+
+
 
 #img-about {
     margin-top: -20%;
@@ -180,16 +187,69 @@ table {
     transform: scaleY(0.9) translateY(-5%);
 }
 
+#about-overlay {
+
+    opacity: 0.3;
+    height: 120vh;
+    width: 100vw;
+    background-color: #0f121a;
+}
+
 #content {
     
-    top: 25%;
-    left: 40%;
+    top: 25% !important;
+    width: 100vw !important;
+    margin: auto !important;
 }
 
 #nav-title-1 { 
     
     font-weight: 20;
     font-size: 64px;
+}
+
+#delete-account {
+
+    font-size: 10pt;
+}
+
+#update-background {
+
+    max-width: 85px;
+}
+
+#theme-title {
+
+    font-size: 10pt;
+    font-family: Galvji;
+    font-weight: 700;
+}
+
+.nav-link {
+
+    outline: 0px solid transparent !important;
+}
+
+.update {
+
+    border-radius: 0px;
+    font-family: Galvji;
+    font-size: 10pt;
+    font-weight: 500;
+}
+
+.error {
+
+    font-size: 9pt;
+    padding: 4px;
+    color: #dc3545 !important;
+}
+
+.account-detail {
+
+    font-size: 10pt;
+    font-weight: 300;
+    line-height: 10pt;
 }
 
 .alert_hide {
@@ -222,8 +282,15 @@ table {
 
 .dropdown-menu{
 
-    min-width: 25rem;\
+    min-width: 25rem;
+    box-shadow: rgba(50, 50, 50, 0.9) 0px 0px 20px !important;
 }
+
+.dropdown-menu-base{
+
+    transform: translate3d(-269px, -183px, 0px) !important;
+}
+
 
 .dropdown-form {
 
@@ -236,6 +303,19 @@ table {
     white-space: nowrap;
     background-color: transparent;
     border: 0;
+}
+
+
+.background-dropdown::after {
+
+    border: none !important;
+}
+
+.update-background {
+
+    bottom: 0vh;
+    right: 0vw;
+    box-shadow: rgba(50, 50, 50, 0.4) 2px 2px 5px;
 }
 
 
@@ -299,6 +379,28 @@ table {
     width: 100%;
 }
 
+.border-black {
+
+    border-color: #1a1e21 !important;
+}
+
+.bg-black {
+
+    background-color: #1a1e21 !important;
+}
+
+.color{
+
+    opacity: 0.8;
+    width: 50px;
+    height: 50px;
+}
+
+.color:hover {
+opacity: 1;
+cursor: pointer;
+}
+
 
 .title {
 
@@ -354,6 +456,11 @@ table {
     height: 80px;
 }
 
+.section-account-bar {
+
+    height: 80px;
+}
+
 .section-contact-header {
     font-size: 20px;
     font-weight: 600;
@@ -366,11 +473,21 @@ table {
     font-weight: 300;
 }
 
+.section-account {
+
+    height: 100%;
+    font-size: 10pt;
+    font-weight: 500;
+    line-height: 1.3 !important;
+    font-family: Galvji;
+}
+
 .mission-p {
 
     width: 90%;
     max-width: 700px;
 }
+
 
 .inactive-title {
 
@@ -438,6 +555,12 @@ table {
 }
 
 .up-arrow{
+
+    height: 30px;
+    top: 0px;
+}
+
+.up-arrow-adjust {
 
     height: 30px;
     top: 0px;
@@ -681,8 +804,19 @@ table {
     font-size: 20pt !important;
 }
 
+.btn-black {
 
+    color: #fff !important;
+    background-color: #2e3439 !important;
+    border-color: #24292d !important;
+}
 
+.btn-black:hover{
+
+    color: #fff !important;
+    background-color: #1a1e21 !important;
+    border-color: #0d0f11 !important;
+}
 
 @media screen and (max-width: 576px) {
 
@@ -712,6 +846,16 @@ table {
         padding-left: 1em !important;
         padding-right: 1em !important;
     }
+
+    .up-arrow-adjust {
+
+        margin-right: 145px;
+    }
+
+    .up-arrow {
+
+        margin-right: 10px;
+    } 
 }
     
 
@@ -742,6 +886,16 @@ table {
 
         padding-left: 4em !important;
         padding-right: 4em !important;
+    }
+
+    .up-arrow-adjust {
+
+        margin-right: 140px;
+    }
+
+    .up-arrow {
+
+        margin-right: 7px;
     }      
 }
 
@@ -772,7 +926,17 @@ table {
 
         padding-left: 8em !important;
         padding-right: 8em !important;
-    }           
+    }
+
+    .up-arrow-adjust {
+
+        margin-right: 120px;
+    }
+
+    .up-arrow {
+
+        margin-right: -5px;
+    }         
 }
 
 @media screen and (min-width: 992px) {
@@ -797,6 +961,11 @@ table {
         padding-left: 10em !important;
         padding-right: 10em !important;
     }
+
+    .up-arrow {
+
+        margin-right: -10px;
+    } 
                    
 }
 
