allow removal of menu items

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -225,6 +225,11 @@ table {
     font-weight: 700;
 }
 
+.hide {
+
+    display: none;
+}
+
 .nav-link {
 
     outline: 0px solid transparent !important;
