--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -91,7 +91,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                {{ accform.submit(value="Update", id="update-account", type="button", class_="update btn btn-" + color_scheme + " my-4 mx-2") }}
+                                {{ accform.submit(value="Update", id="update-account", type="button", class_="update btn btn-" + theme_color + " my-4 mx-2") }}
                             </form>
                         </div>
                         <div class="col-1 col-sm-2 col-lg-3">
@@ -153,7 +153,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                {{ pswform.submit(value="Update", id="update-password", type="button", class_="update btn btn-" + color_scheme + " my-4 mx-2") }}
+                                {{ pswform.submit(value="Update", id="update-password", type="button", class_="update btn btn-" + theme_color + " my-4 mx-2") }}
                             </form>
                         </div>
                         <div class="col-1 col-sm-2 col-lg-3">
