--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -77,7 +77,7 @@
                                         <textarea class="form-control" id="message" rows="5" required></textarea>
                                     </div>
                                 </div>
-                                <button id="contact" type="button" class="btn {{ 'btn-' + color_scheme }} float-right my-4 mx-2">
+                                <button id="contact" type="button" class="btn {{ 'btn-' + theme_color }} float-right my-4 mx-2">
                                     Submit
                                 </button>
                             </form>    
