--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -49,6 +49,8 @@
                                                 More
                                             </small>
                                         </button>
+                                        <img class="upload-user-image d-inline ml-4" src="/static/images/upload.png">
+                                        <img class="remove-user d-inline ml-3" src="/static/images/trash.png">
                                     </div> 
                                 </li>
                                 <li class="p-4">
