--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,7 +26,7 @@
                             </div>
                             {% endif %}
                             <br>
-                            <button id="enter" onclick="window.location.href='/about'" class="btn {{ 'btn-' + color_scheme }} mt-5 mr-3 mr-sm-2 px-4 py-3">
+                            <button id="enter" onclick="window.location.href='/about'" class="btn {{ 'btn-' + theme_color }} mt-5 mr-3 mr-sm-2 px-4 py-3">
                                 Enter
                             </button>
 
@@ -40,10 +40,10 @@
                                     <img id="update-background" src="/static/images/wallpaper.png">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-base mt-5" aria-labelledby="navbarDropdown">
-                                    <form class="dropdown-form d-inline-block" action="/upload-image/background-image/home" method="POST" enctype="multipart/form-data" onsubmit="return confirm('Are you sure you want to upload this background image? Changes will take effect immediately.');">
+                                    <form class="dropdown-form d-inline-block" action="/upload_image/background-image/home" method="POST" enctype="multipart/form-data" onsubmit="return confirm('Are you sure you want to upload this background image? Changes will take effect immediately.');">
                                         <div class="form-group">
                                             <label class="form-label pl-1">
-                                                Select&nbsp;Image:
+                                                Select&nbsp;background&nbsp;image:
                                             </label>
                                             <div class="custom-file d-block">
                                                 <input type="file" class="custom-file-input" name="background-image" id="background-image">
