added flash to login page, removed delete when users list empty

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -17,7 +17,7 @@
                     <br>
                     <br>
                     <label class="label">
-                        Leave empty to start a new site.
+                        Leave default to start a new site.
                     </label>
                     {% for error in form.group_id.errors %}
                         <div class="validation-error">{{ error }}</div>
