--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -48,8 +48,12 @@ ul#board li {
 
 ul.flashes {
 
-    width:350px;
     z-index: 3000;
+    font-size: 10pt;
+    list-style: none;
+    font-family: Galvji;
+    margin-top: 15vh;
+    color: #343a40;
 }
 
 input {
