--- a/app/templates/base_login_register.html
+++ b/app/templates/base_login_register.html
@@ -35,20 +35,29 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
         <script  src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
-        <style>
-
-            
-
-        </style>
+        
+        <script type="text/javascript" src="{{ url_for('static', filename = 'base_login_register.js') }}"></script>
     </head>
     <body>
-        
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class="row flash-containter">
+            <div class="col text-center">
+                <ul class="flashes p-0 font-weight-bold">
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endwith %}
+
         {% block content %}
         {% endblock %}
 
         {% block javascript %}
 
-            <script type="text/javascript" src="{{ url_for('static', filename = 'layout.js') }}"></script>
 
         {% endblock %}
     </body>
