--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -94,5 +94,9 @@
 
         <script type="text/javascript" src="{{ url_for('static', filename='contact.js') }}"></script>
 
+        <script type="text/javascript">
+            var group_id = {{group_id}}
+        </script>
+
 
 {% endblock %}
