--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,7 +26,7 @@
                             </div>
                             {% endif %}
                             <br>
-                            <button id="enter" onclick="window.location.href='/about'" class="btn {{ 'btn-' + theme_color }} mt-5 mr-3 mr-sm-2 px-4 py-3">
+                            <button id="enter" onclick="window.location.href='/{{group_id}}/about'" class="btn {{ 'btn-' + theme_color }} mt-5 mr-3 mr-sm-2 px-4 py-3">
                                 Enter
                             </button>
 
